# Coin_Dash_SE

./: .gitignore  Coin Dash se.md  Dockerfile  Lark卡片（通知卡片） .md  README.md  logs_page_plan.md  pyproject.toml  temp_config.tmp
coin_dash/: api.py  cli.py  config.py  state_manager.py
coin_dash/ai/: __init__.py  committee_aggregator.py  committee_config.py  committee_engine.py  committee_schemas.py  context.py  deepseek_adapter.py  filter_adapter.py  glm_filter.py  mock_adapter.py  models.py  safe_fallback.py  usage_tracker.py
coin_dash/backtest/: __init__.py  engine.py
coin_dash/data/: __init__.py  exchange_base.py  fetcher.py  fetcher_mt5.py  local_csv.py  pipeline.py  schemas.py  timeframes.py  validators.py
coin_dash/db/: __init__.py  ai_decision_logger.py  client.py  kline_writer.py  models.py  performance_aggregator.py  services.py  system_monitor.py  trading_recorder.py
coin_dash/events/: __init__.py  triggers.py
coin_dash/exec/: __init__.py  paper.py
coin_dash/features/: __init__.py  market_mode.py  multi_timeframe.py  trend.py  (+1 more)
config/: config.yaml
docs/: glm_filter.md
frontend/: index.html  package-lock.json  package.json
scripts/: check_release.ps1  check_release.sh  smoke_llm_clients.py  test_glm45v.py
tests/: conftest.py  test_api_decisions.py  test_committee_aggregator.py  test_committee_engine.py  test_failure_paths.py  test_llm_clients_smoke.py  test_margin_and_sizing.py  test_paper_broker_single.py  test_performance_consistency.py  test_performance_recording.py  test_performance_tracker.py  test_regression_smoke.py  test_structure.py
(+36 files in other folders)
